# multimodal-data

./: .gitignore  README.md  pytest.ini
01-dataset-download/: README.md  download_hf_dataset.py  hf_hub_cache_check.py  (+12 more)
01-dataset-download/openstreetmap/: README.md  dataset.py  demo.ipynb  pyproject.toml  run.py  scrape.py  utils.py
01-dataset-download/openstreetmap/scripts/: dl_planet.sh  import_osm.sh
02-standardisation/: README.md  adapter_medtrinity_demo.py  config.json  filter_resolution.py  main.py  pyproject.toml  run.slurm
02-standardisation/adapters/: __init__.py  meditron.py  medmax.py  medtrinity.py  medtrinity_demo.py  mmc4.py
02-standardisation/configs/: busi.json  covid_us.json  ddti.json  image_only.json  llava_instruct.json  llava_pretrained_cleaned.json  main.json  mammoth.json  medmax.json  medtrinity_demo.json  medtriniy_demo.json  mmc4.json  pixmo_anything.json  pixmo_cap.json
02-standardisation/filters/: __init__.py  deduplication.py  resolution.py
02-standardisation/pipeline/: __init__.py  allowlist.py  base.py  checkpoint.py  logging.py  pipeline.py  schema.py  webdataset.py  workers.py
02-standardisation/src/: adapter.py  allowlist.py  base.py  checkpoint.py  filter.py  logging.py  pipeline.py  sample.py  schema.py  workers.py  writer.py
02-standardisation/src/adapter/: api.py  base.py
02-standardisation/src/core/: allowlist.py  pipeline.py  writer.py
02-standardisation/src/filter/: api.py  base.py
02-standardisation/src/schema/: image_format.py  language.py  license.py  sample.py
02-standardisation/writers/: huggingface.py
(+1879 files in other folders)
