[project]
name = "standardisation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.0",
    "datasets>=4.4.1",
    "imagehash>=4.3.2",
    "lmdb>=1.7.5",
    "msgspec>=0.20.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "zstandard>=0.25.0",
]
