[project]
name = "cs433-project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
